fix image position on mobile device

--- a/style.css
+++ b/style.css
@@ -642,6 +642,10 @@ body .mw-echo-overlay::before{
     padding-left: 5px;
     padding-right: 5px; 
   }
+  .container .row{
+    margin-left: -5px;
+    margin-right: -5px;
+  }
 }
 
 #wiki-body h2 {
